[metadata]
name = codev
version = attr: codev.__version__
description = Continuous delivery tool
author = Jan Češpivo (http://www.basecue.com/)"
author_email = jan.cespivo@gmail.com
license = Apache 2.0
license_file = LICENSE
url = http://www.basecue.com/codev/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
install_requires =
    click ==6.6
    PyYAML ==3.11
    colorama ==0.3.7

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
scripts =
    codev/control/bin/codev
    codev/perform/bin/codev-perform
    codev/perform/bin/codev-status

[options.packages.find]
exclude = tests

[mypy]
disallow_untyped_defs = True

[tox]
envlist = py36

[testenv:test]
deps = pytest
commands = pytest

[testenv:mypy]
deps = mypy
commands = mypy codev
